syntax = "proto3";

package health;

option go_package = "github.com/marboga/gametimehero/proto/health";

message HealthResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
    string message = 2;
}
